Update logging dependencies